# obsidian-clip

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  fetch.rs  gemini.rs  main.rs  note.rs  obsidian.rs
